[package]
name = "firecracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "big"
path = "src/big_robot.rs"

[[bin]]
name = "small"
path = "src/small_robot.rs"

[[bin]]
name = "test"
path = "src/testing.rs"

[dependencies]
robot_serial = { git = "ssh://git@github.com/EMU5-Robotics/transport.git", rev = "f977305f1b598a63bc5d1c3ddf5f68ecf76024fd" }
communication = { git = "ssh://git@github.com/EMU5-Robotics/communication.git", rev = "99af0dc0798adfeeaa672f7fd0fdecd811f58c73" }
log = "0.4.22"
